// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 37,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 36,
      },
    },
    "server": Object {
      "name": Object {
        "line": 33,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 42,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 39,
      },
      "basic-auth": Object {
        "line": 40,
      },
      "normal_security_var": Object {
        "line": 41,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 34,
      },
      "2name": Object {
        "line": 33,
      },
      "normal_server_var": Object {
        "line": 36,
      },
      "p*o?r*t": Object {
        "line": 35,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 39,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 38,
      },
      "petstore_auth": Object {
        "line": 37,
      },
    },
    "server": Object {
      "name": Object {
        "line": 33,
      },
      "port": Object {
        "line": 34,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 37,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 33,
      },
      "http_basic": Object {
        "line": 34,
      },
      "http_bearer": Object {
        "line": 35,
      },
      "oauth2": Object {
        "line": 36,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 35,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 34,
      },
      "petstore_auth": Object {
        "line": 33,
      },
    },
  },
}
`;

exports[`webhooks C# snippet generation dotnet6 request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 35,
      "start": 27,
    },
    "verification": Object {
      "end": 25,
      "start": 9,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 33,
      },
      "port": Object {
        "line": 34,
      },
    },
  },
}
`;

exports[`webhooks Node.js AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 52,
      "start": 23,
    },
    "verification": Object {
      "end": 21,
      "start": 19,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Node.js AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-default-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 52,
      "start": 23,
    },
    "verification": Object {
      "end": 21,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 66,
      },
    },
    "server": Object {
      "name": Object {
        "line": 63,
      },
    },
  },
}
`;

exports[`webhooks Node.js AWS snippet generation with automatic creation of new API keys aws request should match fixture for "quirky-escaping-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 52,
      "start": 23,
    },
    "verification": Object {
      "end": 21,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 69,
      },
      "basic-auth": Object {
        "line": 70,
      },
      "normal_security_var": Object {
        "line": 71,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 64,
      },
      "2name": Object {
        "line": 63,
      },
      "normal_server_var": Object {
        "line": 66,
      },
      "p*o?r*t": Object {
        "line": 65,
      },
    },
  },
}
`;

exports[`webhooks Node.js AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-and-server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 52,
      "start": 23,
    },
    "verification": Object {
      "end": 21,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 68,
      },
      "petstore_auth": Object {
        "line": 67,
      },
    },
    "server": Object {
      "name": Object {
        "line": 63,
      },
      "port": Object {
        "line": 64,
      },
    },
  },
}
`;

exports[`webhooks Node.js AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-types-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 52,
      "start": 23,
    },
    "verification": Object {
      "end": 21,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 63,
      },
      "http_basic": Object {
        "line": 64,
      },
      "http_bearer": Object {
        "line": 65,
      },
      "oauth2": Object {
        "line": 66,
      },
    },
  },
}
`;

exports[`webhooks Node.js AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 52,
      "start": 23,
    },
    "verification": Object {
      "end": 21,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 64,
      },
      "petstore_auth": Object {
        "line": 63,
      },
    },
  },
}
`;

exports[`webhooks Node.js AWS snippet generation with automatic creation of new API keys aws request should match fixture for "server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 52,
      "start": 23,
    },
    "verification": Object {
      "end": 21,
      "start": 19,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 63,
      },
      "port": Object {
        "line": 64,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 15,
    },
    "verification": Object {
      "end": 13,
      "start": 11,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 15,
    },
    "verification": Object {
      "end": 13,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 40,
      },
    },
    "server": Object {
      "name": Object {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 15,
    },
    "verification": Object {
      "end": 13,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 43,
      },
      "basic-auth": Object {
        "line": 44,
      },
      "normal_security_var": Object {
        "line": 45,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 38,
      },
      "2name": Object {
        "line": 37,
      },
      "normal_server_var": Object {
        "line": 40,
      },
      "p*o?r*t": Object {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 15,
    },
    "verification": Object {
      "end": 13,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 42,
      },
      "petstore_auth": Object {
        "line": 41,
      },
    },
    "server": Object {
      "name": Object {
        "line": 37,
      },
      "port": Object {
        "line": 38,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 15,
    },
    "verification": Object {
      "end": 13,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 37,
      },
      "http_basic": Object {
        "line": 38,
      },
      "http_bearer": Object {
        "line": 39,
      },
      "oauth2": Object {
        "line": 40,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 15,
    },
    "verification": Object {
      "end": 13,
      "start": 11,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 38,
      },
      "petstore_auth": Object {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation aws request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 15,
    },
    "verification": Object {
      "end": 13,
      "start": 11,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 37,
      },
      "port": Object {
        "line": 38,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 24,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 27,
      },
    },
    "server": Object {
      "name": Object {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 30,
      },
      "basic-auth": Object {
        "line": 31,
      },
      "normal_security_var": Object {
        "line": 32,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 25,
      },
      "2name": Object {
        "line": 24,
      },
      "normal_server_var": Object {
        "line": 27,
      },
      "p*o?r*t": Object {
        "line": 26,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 29,
      },
      "petstore_auth": Object {
        "line": 28,
      },
    },
    "server": Object {
      "name": Object {
        "line": 24,
      },
      "port": Object {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 24,
      },
      "http_basic": Object {
        "line": 25,
      },
      "http_bearer": Object {
        "line": 26,
      },
      "oauth2": Object {
        "line": 27,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 25,
      },
      "petstore_auth": Object {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 10,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 24,
      },
      "port": Object {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 24,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 27,
      },
    },
    "server": Object {
      "name": Object {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 33,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 30,
      },
      "basic-auth": Object {
        "line": 31,
      },
      "normal_security_var": Object {
        "line": 32,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 25,
      },
      "2name": Object {
        "line": 24,
      },
      "normal_server_var": Object {
        "line": 27,
      },
      "p*o?r*t": Object {
        "line": 26,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 29,
      },
      "petstore_auth": Object {
        "line": 28,
      },
    },
    "server": Object {
      "name": Object {
        "line": 24,
      },
      "port": Object {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 28,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 24,
      },
      "http_basic": Object {
        "line": 25,
      },
      "http_bearer": Object {
        "line": 26,
      },
      "oauth2": Object {
        "line": 27,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 25,
      },
      "petstore_auth": Object {
        "line": 24,
      },
    },
  },
}
`;

exports[`webhooks PHP snippet generation laravel request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 26,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 8,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 24,
      },
      "port": Object {
        "line": 25,
      },
    },
  },
}
`;

exports[`webhooks Python AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 44,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 20,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Python AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-default-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 44,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 58,
      },
    },
    "server": Object {
      "name": Object {
        "line": 55,
      },
    },
  },
}
`;

exports[`webhooks Python AWS snippet generation with automatic creation of new API keys aws request should match fixture for "quirky-escaping-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 44,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 61,
      },
      "basic-auth": Object {
        "line": 62,
      },
      "normal_security_var": Object {
        "line": 63,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 56,
      },
      "2name": Object {
        "line": 55,
      },
      "normal_server_var": Object {
        "line": 58,
      },
      "p*o?r*t": Object {
        "line": 57,
      },
    },
  },
}
`;

exports[`webhooks Python AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-and-server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 44,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 60,
      },
      "petstore_auth": Object {
        "line": 59,
      },
    },
    "server": Object {
      "name": Object {
        "line": 55,
      },
      "port": Object {
        "line": 56,
      },
    },
  },
}
`;

exports[`webhooks Python AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-types-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 44,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 55,
      },
      "http_basic": Object {
        "line": 56,
      },
      "http_bearer": Object {
        "line": 57,
      },
      "oauth2": Object {
        "line": 58,
      },
    },
  },
}
`;

exports[`webhooks Python AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 44,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 20,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 56,
      },
      "petstore_auth": Object {
        "line": 55,
      },
    },
  },
}
`;

exports[`webhooks Python AWS snippet generation with automatic creation of new API keys aws request should match fixture for "server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 44,
      "start": 24,
    },
    "verification": Object {
      "end": 22,
      "start": 20,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 55,
      },
      "port": Object {
        "line": 56,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 44,
      },
    },
    "server": Object {
      "name": Object {
        "line": 41,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 47,
      },
      "basic-auth": Object {
        "line": 48,
      },
      "normal_security_var": Object {
        "line": 49,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 42,
      },
      "2name": Object {
        "line": 41,
      },
      "normal_server_var": Object {
        "line": 44,
      },
      "p*o?r*t": Object {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 46,
      },
      "petstore_auth": Object {
        "line": 45,
      },
    },
    "server": Object {
      "name": Object {
        "line": 41,
      },
      "port": Object {
        "line": 42,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 41,
      },
      "http_basic": Object {
        "line": 42,
      },
      "http_bearer": Object {
        "line": 43,
      },
      "oauth2": Object {
        "line": 44,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 42,
      },
      "petstore_auth": Object {
        "line": 41,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation aws request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 21,
    },
    "verification": Object {
      "end": 19,
      "start": 17,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 41,
      },
      "port": Object {
        "line": 42,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 39,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 43,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 39,
      },
    },
    "server": Object {
      "name": Object {
        "line": 36,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 48,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 42,
      },
      "basic-auth": Object {
        "line": 43,
      },
      "normal_security_var": Object {
        "line": 44,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 37,
      },
      "2name": Object {
        "line": 36,
      },
      "normal_server_var": Object {
        "line": 39,
      },
      "p*o?r*t": Object {
        "line": 38,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 45,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 41,
      },
      "petstore_auth": Object {
        "line": 40,
      },
    },
    "server": Object {
      "name": Object {
        "line": 36,
      },
      "port": Object {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 43,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 36,
      },
      "http_basic": Object {
        "line": 37,
      },
      "http_bearer": Object {
        "line": 38,
      },
      "oauth2": Object {
        "line": 39,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 41,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 37,
      },
      "petstore_auth": Object {
        "line": 36,
      },
    },
  },
}
`;

exports[`webhooks Python snippet generation flask request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 41,
      "start": 31,
    },
    "verification": Object {
      "end": 29,
      "start": 19,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 36,
      },
      "port": Object {
        "line": 37,
      },
    },
  },
}
`;

exports[`webhooks Ruby AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 59,
      },
    },
  },
}
`;

exports[`webhooks Ruby AWS snippet generation with automatic creation of new API keys aws request should match fixture for "empty-default-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 62,
      },
    },
    "server": Object {
      "name": Object {
        "line": 59,
      },
    },
  },
}
`;

exports[`webhooks Ruby AWS snippet generation with automatic creation of new API keys aws request should match fixture for "quirky-escaping-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 65,
      },
      "basic-auth": Object {
        "line": 66,
      },
      "normal_security_var": Object {
        "line": 67,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 60,
      },
      "2name": Object {
        "line": 59,
      },
      "normal_server_var": Object {
        "line": 62,
      },
      "p*o?r*t": Object {
        "line": 61,
      },
    },
  },
}
`;

exports[`webhooks Ruby AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-and-server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 64,
      },
      "petstore_auth": Object {
        "line": 63,
      },
    },
    "server": Object {
      "name": Object {
        "line": 59,
      },
      "port": Object {
        "line": 60,
      },
    },
  },
}
`;

exports[`webhooks Ruby AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-types-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 59,
      },
      "http_basic": Object {
        "line": 60,
      },
      "http_bearer": Object {
        "line": 61,
      },
      "oauth2": Object {
        "line": 62,
      },
    },
  },
}
`;

exports[`webhooks Ruby AWS snippet generation with automatic creation of new API keys aws request should match fixture for "security-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 60,
      },
      "petstore_auth": Object {
        "line": 59,
      },
    },
  },
}
`;

exports[`webhooks Ruby AWS snippet generation with automatic creation of new API keys aws request should match fixture for "server-variables-create" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 47,
      "start": 20,
    },
    "verification": Object {
      "end": 18,
      "start": 17,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 63,
      },
    },
    "server": Object {
      "name": Object {
        "line": 59,
      },
      "port": Object {
        "line": 60,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 31,
      "start": 17,
    },
    "verification": Object {
      "end": 15,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 31,
      "start": 17,
    },
    "verification": Object {
      "end": 15,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 46,
      },
    },
    "server": Object {
      "name": Object {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 31,
      "start": 17,
    },
    "verification": Object {
      "end": 15,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 49,
      },
      "basic-auth": Object {
        "line": 50,
      },
      "normal_security_var": Object {
        "line": 51,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 44,
      },
      "2name": Object {
        "line": 43,
      },
      "normal_server_var": Object {
        "line": 46,
      },
      "p*o?r*t": Object {
        "line": 45,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 31,
      "start": 17,
    },
    "verification": Object {
      "end": 15,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 48,
      },
      "petstore_auth": Object {
        "line": 47,
      },
    },
    "server": Object {
      "name": Object {
        "line": 43,
      },
      "port": Object {
        "line": 44,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 31,
      "start": 17,
    },
    "verification": Object {
      "end": 15,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 43,
      },
      "http_basic": Object {
        "line": 44,
      },
      "http_bearer": Object {
        "line": 45,
      },
      "oauth2": Object {
        "line": 46,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 31,
      "start": 17,
    },
    "verification": Object {
      "end": 15,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 44,
      },
      "petstore_auth": Object {
        "line": 43,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation aws request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 31,
      "start": 17,
    },
    "verification": Object {
      "end": 15,
      "start": 14,
    },
  },
  "variables": Object {
    "security": Object {
      "apiKey": Object {
        "line": 47,
      },
    },
    "server": Object {
      "name": Object {
        "line": 43,
      },
      "port": Object {
        "line": 44,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "empty" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 30,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {},
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "empty-default" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 34,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "petstore_auth": Object {
        "line": 33,
      },
    },
    "server": Object {
      "name": Object {
        "line": 30,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "quirky-escaping" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 39,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "\\"petstore\\" auth": Object {
        "line": 36,
      },
      "basic-auth": Object {
        "line": 37,
      },
      "normal_security_var": Object {
        "line": 38,
      },
    },
    "server": Object {
      "*port": Object {
        "line": 31,
      },
      "2name": Object {
        "line": 30,
      },
      "normal_server_var": Object {
        "line": 33,
      },
      "p*o?r*t": Object {
        "line": 32,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 36,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 35,
      },
      "petstore_auth": Object {
        "line": 34,
      },
    },
    "server": Object {
      "name": Object {
        "line": 30,
      },
      "port": Object {
        "line": 31,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "security-types" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 34,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "api_key": Object {
        "line": 30,
      },
      "http_basic": Object {
        "line": 31,
      },
      "http_bearer": Object {
        "line": 32,
      },
      "oauth2": Object {
        "line": 33,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "security-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "security": Object {
      "basic_auth": Object {
        "line": 31,
      },
      "petstore_auth": Object {
        "line": 30,
      },
    },
  },
}
`;

exports[`webhooks Ruby snippet generation rails request should match fixture for "server-variables" 1`] = `
Object {
  "sections": Object {
    "payload": Object {
      "end": 32,
      "start": 26,
    },
    "verification": Object {
      "end": 24,
      "start": 13,
    },
  },
  "variables": Object {
    "server": Object {
      "name": Object {
        "line": 30,
      },
      "port": Object {
        "line": 31,
      },
    },
  },
}
`;
